<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:text="@string/age_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileName" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="280dp"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewProfileFeeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="72dp"
        android:text="@string/profile_feeling_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileAge" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="89dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileFeeling"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileFeeling"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileFeeling"
        app:srcCompat="@drawable/ok" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileName"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileName"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileAge"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileAge"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileAge"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewProfileFeelings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>